--- a/oabutton/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/oabutton/apps/web/templates/web/index.html
@@ -65,7 +65,7 @@ change.
           <h1>Ok Ace! Give me the bookmarklet!</h1>
         </div>
         <div class="hero-unit">
-            <p>Drag this to your bookmark bar: <a href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','{{ request.META.HTTP_HOST }}/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
+            <p>Drag this to your bookmark bar: <a href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','#{{ request.META.HTTP_HOST }}/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
 </a>
           </p>
         </div>
@@ -93,7 +93,7 @@ adding new features.
         </div><a href="http://hacks.rewiredstate.org/events/bmj/open-access-button">A BMJ / Rewired State hackday hack</a>
         <ul class="thumbnails">
           <li class="span2"><a href="http://twitter.com/Mcarthur_Joe">
-              <div class="thumbnail"><img src="/img/joe.jpg"/>
+              <div class="thumbnail"><img src="/static/img/joe.jpg"/>
                 <div class="caption">
                   <h3>Joe</h3>
                   <p>@Mcarthur_Joe</p>
@@ -101,7 +101,7 @@ adding new features.
               </div></a>
           </li>
           <li class="span2"><a href="http://twitter.com/davidecarroll">
-              <div class="thumbnail"><img src="/img/david.jpg"/>
+              <div class="thumbnail"><img src="/static/img/david.jpg"/>
                 <div class="caption">
                   <h3>David</h3>
                   <p>@davidecarroll</p>
@@ -133,7 +133,7 @@ adding new features.
               </div></a>
           </li>
           <li class="span2">
-            <div class="thumbnail"><img src="/img/elliot.jpg"/>
+            <div class="thumbnail"><img src="/static/img/elliot.jpg"/>
               <div class="caption">
                 <h3>Elliot</h3>
               </div>
@@ -144,9 +144,6 @@ adding new features.
     </div>
   </div>
 </div>
-<script src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 <script>var map;
 var marker;
 
