--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}{% block content %}<img src="/img/oalogo.png" style="position: absolute; top: 0; right: 0;"/><a id="id_pmc" title="Available at PMC" target="_new" style="position: absolute; top: 0; right: 32px; display: none;"><img src="/img/pmc.png"/></a>
+{% extends "bookmarklet/layout.html" %}{% block content %}<img src="/static/img/oalogo.png" style="position: absolute; top: 0; right: 0;"/><a id="id_pmc" title="Available at PMC" target="_new" style="position: absolute; top: 0; right: 32px; display: none;"><img src="/static/img/pmc.png"/></a>
 <form id="event" action="/add" method="post" class="form-horizontal">
   <input id="id_accessed" type="hidden" name="accessed"/>
   <div class="control-group">
@@ -35,6 +35,7 @@
     <div class="controls">{% if  vars.doi %}
       <input id="id_doi" readonly="readonly" type="text" name="doi"{% __pyjade_attrs attrs=[('value',(''+vars.doi+''))] %} class="input-block-level"/>{% else %}
       <input id="id_doi" type="text" name="doi" placeholder="e.g. 10.1136/bmj.c7086" class="input-block-level"/>{% endif %}
+      <p class="help-text">Document Object Identifier (DOI)</p>
     </div>
   </div>
   <div class="control-group">
@@ -53,4 +54,5 @@
     </div>
   </div>
 </form>{% endblock %}{% block scripts %}
-<script src="/js/add.js"></script>{% endblock %}
+<script src="/static/js/jquery.min.js"></script>
+<script src="/static/js/add.js"></script>{% endblock %}
