--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -16,7 +16,7 @@
     <!-- Main body-->
     <div class="container">{% block content %}{% endblock %}
     </div>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.js"></script>{% block scripts %}{% endblock %}
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.js"></script>{% block scripts %}{% endblock %}
   </body>
 </html>
