--- a/oabutton/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/oabutton/apps/web/templates/web/index.html
@@ -65,7 +65,9 @@ change.
           <h1>Ok Ace! Give me the bookmarklet!</h1>
         </div>
         <div class="hero-unit">
-            <p>Drag this to your bookmark bar: <a href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','#{{ request.META.HTTP_HOST }}/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
+            <p>Drag this to your bookmark bar: <a
+                href="
+                javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://{{ request.META.HTTP_HOST }}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
 </a>
           </p>
         </div>
