rooted the css  files to be under /static/css instead of /css

--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Open Access Button">
     <title>{{'Open Access Button'|force_escape}}</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/bootstrap-responsive.min.css">
-    <link rel="stylesheet" href="/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css">
+    <link rel="stylesheet" href="/static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/app.css">
   </head>
   <body style="margin-top: 20px">
     <!-- Main body-->
