--- a/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
+++ b/oabutton/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
@@ -1,4 +1,6 @@
-{% extends "layout.jade" %}{% block content %}
+{% extends "bookmarklet/layout.html" %}{% block content %}
 <h2>Thanks!</h2>
-<p>Now to find an Open Access version…</p>{% if  scholar_url != '' %}<a id="id_scholar" title="Find in Google Scholar" target="_blank"{% __pyjade_attrs attrs=[('href',(scholar_url))] %}><img src="/static/img/scholar.png"/>Search Google Scholar
-</a>{% endif %}{% endblock %}
+<p>Now to find an Open Access version…</p>
+{% if scholar_url %}
+<a id="id_scholar" title="Find in Google Scholar" target="_blank" href="{{ scholar_url }}"><img src="/static/img/scholar.png"/>Search Google Scholar</a>
+{% endif %}{% endblock %}
