--- a/oabutton/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/oabutton/apps/web/templates/web/index.html
@@ -175,27 +175,28 @@ function initialise() {
 function addMarkers(map, events) {
   var infowindow = new google.maps.InfoWindow();
   for (var i = 0; i < events.length; i++) {
-    var evt = events[i]
-    var marker = new google.maps.Marker({
-        position: new google.maps.LatLng(evt.coords.lat, evt.coords.lng),
+    if(events[i].coords.length !== 0) {
+      var marker = new google.maps.Marker({
+        position: new google.maps.LatLng(events[i].coords.lat, events[i].coords.lng),
         map: map,
         icon: 'static/img/noalogo.png'
-    });
+      });
 
-    bubble_content = '<h4>' + evt.name;
-        if (evt.profession != '') {
-            bubble_content += ' <em>(' + evt.profession + ')</em>';
-        }
-        bubble_content += '</h4>';
-    bubble_content += '<p>' + evt.story + '</p>';
-    bubble_content += '<a target="_blank" href="http://dx.doi.org/' + evt.doi + '">doi</a>';
-    bubble_content += ' | ';
-    bubble_content += '<a target="_blank" href="' + evt.url + '">url</a>';
-    bubble_content += ' | ';
-    bubble_content += evt.calendar_date || '';
-
-    makeInfoWindowEvent(map, infowindow, bubble_content, marker);
-}
+      bubble_content = '<h4>' + events[i].name;
+      if (events[i].profession != '') {
+        bubble_content += ' <em>(' + events[i].profession + ')</em>';
+      }
+      bubble_content += '</h4>';
+      bubble_content += '<p>' + events[i].story + '</p>';
+      bubble_content += '<a target="_blank" href="http://dx.doi.org/' + events[i].doi + '">doi</a>';
+      bubble_content += ' | ';
+      bubble_content += '<a target="_blank" href="' + events[i].url + '">url</a>';
+      bubble_content += ' | ';
+      bubble_content += events[i].calendar_date || '';
+      
+      makeInfoWindowEvent(map, infowindow, bubble_content, marker);
+    }
+  }
 }
 
 google.maps.event.addDomListener(window, 'load', initialise);
