helps if i use the right django syntax.  also - testcases are good.

--- a/oabutton/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/oabutton/apps/web/templates/web/index.html
@@ -67,7 +67,7 @@ change.
         <div class="hero-unit">
             <p>Drag this to your bookmark bar: <a
                 href="
-                javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://{% hostname %}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
+                javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://{{ hostname }}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
 </a>
           </p>
         </div>
