--- a/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
@@ -59,6 +59,12 @@
       <button class="btn btn-primary pull-right">Open Access, please!</button>
     </div>
   </div>
-</form>{% endblock %}{% block scripts %}
+</form>
+   <div class="control-group">
+    <div class="controls">
+      <a href="mailto:oabutton@gmail.com?subject=OAButton%20Bug%20Report">Report a bug</a>
+    </div>
+   </div>
+{% endblock %}{% block scripts %}
 <script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/add.js"></script>{% endblock %}
