--- a/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/layout.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/static/css/font-awesome.min.css">
     <link rel="stylesheet" href="/static/css/app.css">
   </head>
-  <body style="margin-top: 20px">
+  <body style="margin-top: 20px" {% block body_attrs %}{% endblock %}>
     <!-- Main body-->
     <div class="container">{% block content %}{% endblock %}
     </div>
