--- a/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
@@ -1,6 +1,9 @@
 {% extends "bookmarklet/layout.html" %}{% block content %}
 <h2>Thanks!</h2>
 <p>Now to find an Open Access version…</p>
-{% if scholar_url %}
-<a id="id_scholar" title="Find in Google Scholar" target="_blank" href="{{ scholar_url }}"><img src="/static/img/scholar.png"/>Search Google Scholar</a>
-{% endif %}{% endblock %}
+<ul id="oa_links">
+</ul>
+{% endblock %}
+{%- block scripts %}
+<script src="/static/js/success.js"></script>{% endblock %}
+{%- block body_attrs %}data-doi="{{doi|urlencode}}"{% endblock %}
