Fix jinja syntax in success.html.

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
@@ -4,6 +4,6 @@
 <ul id="oa_links">
 </ul>
 {% endblock %}
-{%- block scripts %}
+{% block scripts %}
 <script src="/static/js/success.js"></script>{% endblock %}
-{%- block body_attrs %}data-doi="{{doi|urlencode}}"{% endblock %}
+{% block body_attrs %}data-doi="{{doi|urlencode}}"{% endblock %}
