Lookup title via CrossRef and add a Google Scholar title search link.

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/success.html
@@ -3,6 +3,9 @@
 <p>Now to find an Open Access version…</p>
 <ul id="oa_links">
 </ul>
+<div>
+<a href="http://en.wikipedia.org/wiki/Digital_object_identifier">What's a DOI?</a>
+</div>
 {% endblock %}
 {% block scripts %}
 <script src="/static/js/success.js"></script>{% endblock %}
