--- a/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/apps/web/templates/web/index.html
@@ -14,7 +14,7 @@
       <ul data-spy="affix" data-offset-top="280" class="nav nav-list bs-docs-sidenav">
         <li><a href="#the-project">The project</a>
         </li>
-        <li><a href="#map">Map</a>
+        <li><a href="#map-section">Map</a>
         </li>
         <li><a href="#get-it">Get it!</a>
         </li>
@@ -54,11 +54,11 @@ change.
           </p>
         </div>
       </section>
-      <section id="map">
+      <section id="map-section">
         <div class="page-header">
           <h1>{{count|force_escape}}<small> Scholarly pursuits denied</small></h1>
         </div>
-        <div id="map_canvas"></div>
+        <div id="map" style="height: 500px;"></div>
       </section>
       <section id="get-it">
         <div class="page-header">
@@ -146,59 +146,4 @@ adding new features.
     </div>
   </div>
 </div>
-<script>var map;
-var marker;
-
-function makeInfoWindowEvent(map, infowindow, contentString, marker) {
-  google.maps.event.addListener(marker, 'click', function() {
-    infowindow.setContent(contentString);
-    infowindow.open(map, marker);
-  });
-}
-
-{% comment %}
-Passing in events like this won't scale with large numbers of
-events...
-{% endcomment %}
-function initialise() {
-  var events = {{events|safe}};
-  var mapOptions = {
-    "zoom": 2,
-    "center": new google.maps.LatLng(0, 0),
-    "scrollwheel": false,
-    "mapTypeId": google.maps.MapTypeId.ROADMAP
-  };
-  map = new google.maps.Map(document.getElementById('map_canvas'), mapOptions);
-  addMarkers(map, events);
-}
-
-function addMarkers(map, events) {
-  var infowindow = new google.maps.InfoWindow();
-  for (var i = 0; i < events.length; i++) {
-    if(events[i].coords.length !== 0) {
-      var marker = new google.maps.Marker({
-        position: new google.maps.LatLng(events[i].coords.lat, events[i].coords.lng),
-        map: map,
-        icon: 'static/img/noalogo.png'
-      });
-
-      bubble_content = '<h4>' + events[i].name;
-      if (events[i].profession != '') {
-        bubble_content += ' <em>(' + events[i].profession + ')</em>';
-      }
-      bubble_content += '</h4>';
-      bubble_content += '<p>' + events[i].story + '</p>';
-      bubble_content += '<a target="_blank" href="http://dx.doi.org/' + events[i].doi + '">doi</a>';
-      bubble_content += ' | ';
-      bubble_content += '<a target="_blank" href="' + events[i].url + '">url</a>';
-      bubble_content += ' | ';
-      bubble_content += events[i].calendar_date || '';
-      
-      makeInfoWindowEvent(map, infowindow, bubble_content, marker);
-    }
-  }
-}
-
-google.maps.event.addDomListener(window, 'load', initialise);
-
-</script>{% endblock %}
+{% endblock %}
