minified leaflet.marketcluster

--- a/oabutton/apps/web/templates/web/layout.html
+++ b/oabutton/apps/web/templates/web/layout.html
@@ -23,7 +23,7 @@
   <script src="/static/js/jquery.min.js"></script>
   <script src="/static/js/bootstrap.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
-  <script src="/static/js/leaflet.markercluster-src.js"></script>
+  <script src="/static/js/leaflet.markercluster.js"></script>
   <script>
     var map = L.map('map', {
       center: [20, 0],
