Updated bug address to oabutton+bugs@gmail.com

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/index.html
@@ -62,7 +62,7 @@
 </form>
    <div class="control-group">
     <div class="controls">
-      <a href="mailto:oabutton@gmail.com?subject=OAButton%20Bug%20Report">Report a bug</a>
+      <a href="mailto:oabutton+bugs@gmail.com?subject=OAButton%20Bug%20Report">Report a bug</a>
     </div>
    </div>
 {% endblock %}{% block scripts %}
