* added a test to verify that bookmarklet URLs GET requests work * modified bookmarklet.models.User to be a subclass of mongoengine.django.auth.User

--- a/oabutton/apps/bookmarklet/templates/bookmarklet/bookmarklet.html
+++ b/oabutton/apps/bookmarklet/templates/bookmarklet/bookmarklet.html
@@ -92,6 +92,7 @@
 		loader.parentNode.removeChild(loader);
 
 		// build the iframe URL
+        // Custom URL for user: [{{user_id}}]
 		var url = base + "/api/add/?userid={{ user_id }}&url=" + encodeURIComponent(window.location);
 		var doi = detectDOI();
 		if(doi) {
