--- a/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/apps/web/templates/web/index.html
@@ -65,6 +65,18 @@ change.
           <h1>Ok Ace! Give me the bookmarklet!</h1>
         </div>
         <div class="hero-unit">
+            <form class="form-bookmarklet" action="/api/signup/" method="post"> 
+                <input type="text" name="email" placeholder="Email address" /> 
+                <input type="text" name="name" placeholder="Full Name"/>
+                <input type="text" name="profession" placeholder="Profession" />
+                <input type="text" name="university" placeholder="Institution" />
+                I've read the <a href="/privacy_statement/" target="privacy_popup">privacy statement</a>
+                and want my data to be:<select name="privacy">
+                    <option value="public">Public</option>
+                    <option value="private">Private</option>
+                </select> 
+                <button class="btn btn-large btn-primary clear" type="submit">Generate Custom Bookmarklet</button>
+            </form>
             <p>Drag this to your bookmark bar: <a
                 href="
                 javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://{{ hostname }}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
