--- a/oabutton/apps/web/templates/web/layout.html
+++ b/oabutton/apps/web/templates/web/layout.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/bootstrap-responsive.min.css">
     <link rel="stylesheet" href="/static/css/app.css">
+    <link rel="stylesheet" href="/static/css/forms.css">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">{% block body %}{% endblock %}
