added jquery form plugin to enable ajax submission of the custom bookmarklet form

--- a/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/apps/web/templates/web/index.html
@@ -65,7 +65,7 @@ change.
           <h1>Ok Ace! Give me the bookmarklet!</h1>
         </div>
         <div class="hero-unit">
-            <form class="form-bookmarklet" action="/api/signin/" method="post">{% csrf_token %}
+            <form id="form-bookmarklet" class="form-bookmarklet" action="/api/signin/" method="post">{% csrf_token %}
                 <div>
                     {{ signin_form.email }}
                 </div>
@@ -87,7 +87,8 @@ change.
                     <button class="btn btn-large btn-primary clear" type="submit">Generate Custom Bookmarklet</button>
                 </div>
             </form>
-            <p>Drag this to your bookmark bar: <a
+
+            <p id="bookmarklet">Drag this to your bookmark bar: <a
                 href="
                 javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://{{ hostname }}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
 </a>
