added bookmarklet customization on successful login code

--- a/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/apps/web/templates/web/index.html
@@ -89,8 +89,8 @@ change.
             </form>
 
             <p id="bookmarklet">Drag this to your bookmark bar: <a
-                href="
-                javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://{{ hostname }}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
+                id="bookmarklet-js"
+                href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://{{ hostname }}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
 </a>
           </p>
         </div>
