--- a/oabutton/apps/web/templates/web/layout.html
+++ b/oabutton/apps/web/templates/web/layout.html
@@ -21,7 +21,11 @@
   </head>
   <body data-spy="scroll" data-target=".bs-docs-sidebar">{% block body %}{% endblock %}
   </body>
+
+
   <script src="/static/js/jquery.min.js"></script>
+  <!-- jQuery color -->
+  <script src="http://codeorigin.jquery.com/color/jquery.color-2.1.2.min.js"></script>
   <script src="/static/js/bootstrap.js"></script>
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
   <script src="/static/js/leaflet.markercluster.js"></script>
@@ -77,6 +81,18 @@
     map.addLayer(markers);
   </script>
 <script>
+
+    // Highlight some node. This ought to be moved to some common JS
+    $.fn.animateHighlight = function(highlightColor, duration) {
+        var highlightBg = highlightColor || "#FFFF9C";
+        var animateMs = duration || 1500;
+        var originalBg = this.css("backgroundColor");
+        this.stop().css("background-color",
+        highlightBg).animate({backgroundColor:
+            originalBg}, animateMs);
+    };
+
+
     // wait for the DOM to be loaded 
     $(document).ready(function() { 
         // first hide the bookmarklet
@@ -87,6 +103,9 @@
             target:     '#divToUpdate',
             dataType:   'json',
             url:        '/api/signin/',
+            error:      function() {
+                $('#id_email').animateHighlight("#dd0000", 1000);
+            },
             success:    function(responseJSON, statusText, xhr, formElem) { 
                 $('#bookmarklet-js').attr('href',
                 "javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','"+responseJSON['url']+"');");
