Update repo URL.
Refs issue #74.

--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -1,7 +1,7 @@
 extends web/layout
 block body
   // Github ribbon
-  a(href='https://github.com/OAButton/server')
+  a(href='https://github.com/OAButton/OAButton')
     img#github_ribbon(
         src='https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png',
         alt='Fork me on GitHub')
@@ -81,9 +81,9 @@ block body
 
             p
               |If you want to help out, 
-              a(href='http://github.com/OAButton/server') check out the source on Github
+              a(href='http://github.com/OAButton/OAButton') check out the source on Github
               |, and get hacking. There are some instructions there on 
-              a(href='https://github.com/OAButton/server/blob/develop/instructions.md') how to set up your development server
+              a(href='https://github.com/OAButton/OAButton/blob/develop/instructions.md') how to set up your development server
               |.
 
         section#the-team
