--- a/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/apps/web/templates/web/index.html
@@ -1,5 +1,5 @@
 {% extends "web/layout.html" %}{% block body %}
-<!-- Github ribbon--><a href="https://github.com/OAButton/server"><img id="github_ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"/></a>
+<!-- Github ribbon--><a href="https://github.com/OAButton/OAButton"><img id="github_ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"/></a>
 <header class="jumbotron subhead">
   <div class="container">
     <h1>Open Access Button</h1>
@@ -106,8 +106,8 @@ adding new features.
 
 </p>
           <p>If you want to help out, 
-<a href="http://github.com/OAButton/server">check out the source on Github</a>, and get hacking. There are some instructions there on 
-<a href="https://github.com/OAButton/server/blob/develop/instructions.md">how to set up your development server</a>.
+<a href="http://github.com/OAButton/OAButton">check out the source on Github</a>, and get hacking. There are some instructions there on 
+<a href="https://github.com/OAButton/OAButton/blob/develop/instructions.md">how to set up your development server</a>.
 
           </p>
         </div>
