--- a/oabutton/apps/web/templates/web/layout.html
+++ b/oabutton/apps/web/templates/web/layout.html
@@ -30,7 +30,7 @@
   <script src="http://cdn.leafletjs.com/leaflet-0.6.4/leaflet.js"></script>
   <script src="/static/js/leaflet.markercluster.js"></script>
   <!-- jQuery form plugin -->
-  <script src="http://malsup.github.com/jquery.form.js"></script> 
+  <script src="/static/js/jquery.form.js"></script> 
 
   <!--  Bootstrap Dialog -->
   <script src="/static/js/bootstrap-dialog.js"></script>
