--- a/oabutton/apps/web/templates/web/index.html
+++ b/oabutton/apps/web/templates/web/index.html
@@ -90,7 +90,7 @@ change.
 
             <p id="bookmarklet">Drag this to your bookmark bar: <a
                 id="bookmarklet-js"
-                href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','http://{{ hostname }}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
+                href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','{{ hostname }}/static/js/bookmarklet.js');" class="btn btn-large"><i class="icon-bookmark"></i> Open Access Button
 </a>
           </p>
         </div>
