--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -5,6 +5,10 @@ block body
     img#github_ribbon(
         src='https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png',
         alt='Fork me on GitHub')
+
+  // Navigation
+
+  // Header
   header.jumbotron.subhead
     .container
       h1 Open Access Button
