--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -12,9 +12,9 @@ html(lang='en')
       title= 'Open Access Button'
     link(rel='shortcut icon', type='image/x-icon', href='/img/favicon.ico')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/css/bootstrap-responsive.min.css')
     //- link(rel='stylesheet', href='/css/font-awesome.min.css')
     link(rel='stylesheet', href='/css/app.css')
+    //- TODO: add HTML5 and Respond.js
 
   body(data-spy='scroll', data-target='.bs-docs-sidebar')
     block body
