--- a/oabutton/apps/web/templates/web/layout.jade
+++ b/oabutton/apps/web/templates/web/layout.jade
@@ -7,9 +7,9 @@ html(lang='en')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name='description', content='Open Access Button')
     if title
-      title= 'Open Access Button - ' + title
+      title Open Access Button - #{title}
     else
-      title= 'Open Access Button'
+      title Open Access Button
     link(rel='shortcut icon', type='image/x-icon', href='/img/favicon.ico')
     link(rel='stylesheet', href='/css/bootstrap.min.css')
     //- link(rel='stylesheet', href='/css/font-awesome.min.css')
