--- a/oabutton/apps/web/templates/web/index.jade
+++ b/oabutton/apps/web/templates/web/index.jade
@@ -6,34 +6,135 @@ block body
         src='https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png',
         alt='Fork me on GitHub')
 
-  // Navigation
+  .navbar.navbar-inverse.navbar-fixed-top
+      .container
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') Open Access Button
+        .navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li.active
+              a(href='#start') Get the button
+            li
+              a(href='#map') See the map
+            li
+              a(href='#contribute') Contribute
+            li
+              a(href='#about') Meet the team
+            li
+              a(href='#contact') Contact and follow
+        //
+          /.navbar-collapse 
 
-  // Header
   header.jumbotron.subhead
     .container
-      h1 Open Access Button
-      .lead Journal paywalls block millions of researchers every day.
-      .lead Help us tear them down.
+      h1 Need Access to Research?
+      h2 Sign up below to get the Open Access Button
+    .lead 
+      span Tearing down journal paywalls blocking millions of researchers, one click at a time.
 
-  // Main body
-  .container
+  #start
+    a(name='start')
+    .container
+      form.form-bookmarklet#form-bookmarklet(action='/api/signin/', method='post')
+        {% csrf_token %}
+        .row
+          .col-md-12
+            p
+              | Create a free, anonymous account and get an easy and safe to use bookmarklet. When you are prevented from using an article for your research because access is restricted, just click the Open Access Button! Sign up here to get started right away:
+        .row
+          .col-md-6
+            {{ signin_form.email }}
+          .col-md-6
+            {{ signin_form.name }}
+        .row
+          .col-md-6
+            {{ signin_form.profession }}
+          .col-md-6
+            {{ signin_form.university }}
+        .row
+          .col-md-12
+            p
+              | I have read the 
+              a(href='/privacy_statement/', target='privacy_popup') privacy statement 
+              | and my data should be:
+        .row
+          .col-md-12
+            center
+              div.form-group
+                {{ signin_form.privacy}}
+              button.btn.btn-lg.btn-primary.btn-block(type='submit', onclick="javascript:document.getElementById('bookmarklet').style.display='block';return false") 
+                | Get my personal Open Access button
+        .row
+          .col-md-12
+            #bookmarklet
+              p
+                | Drag this to your bookmark bar:
+              a(id='bookmarklet-js', href="javascript:document.getElementsByTagName('body')[0].appendChild(document.createElement('script')).setAttribute('src','{{ hostname }}/static/js/bookmarklet.js');")
+                button.btn.btn-lg.btn-primary
+                  i.icon-bookmark
+                  | Open Access Button
+
+  #map
+    a(name='map')
+    .container
+
+  #intro
+    a(name='intro')
+    .container
+      h2 How this works.
+      .row
+        .col-md-12.hilite-left
+          p
+            | Your action will help the Open Access community raise awareness to free this and even more scientific knowledge. Cras sodales magna ac libero pulvinar vestibulum. Praesent sit amet accumsan ante, eu imperdiet velit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis adipiscing dictum lobortis. Sed mollis tempus ante id venenatis. Integer vulputate lectus in justo dignissim, sit amet ornare turpis egestas.
+
+  #contribute
+    a(name='contribute')
+    .container
+      h2 Get involved.
+      .row
+        .col-md-12.hilite-right
+          p
+            | Using the Open Access Button (and you are using it, daily, right?) is just the first step. We need more people to be involved at every level of community action. The Open Access Working Group is where you can use the data our users create to take meaningful steps toward opening science. We are using every penny of contribution to raise awareness for this project. You can join our open source project as a developer.
+      #partners
+        h3 Made with support from wonderful partners and Web users like you!
+          // Partners
+
+  #team
+    a(name='team')
+    .container
+      h2 Meet the team.
+        // Team profiles
+
+  #footer
+    a(name='contact')
+    .container
+      .row
+        .col-md-4
+          INFO
+        .col-md-4
+          ABOUT
+        .col-md-4
+          [t] [f] [r]
+      .row
+        .col-md-4
+          p Terms of use
+          p Support community
+          p Collaborator login
+        .col-md-4
+          p Project blog
+          p Get the data
+          p Contacts
+        .col-md-4
+          p All site content is licensed under a Creative Commons Attribution License.
+
+  // Old body
     .row
-      .span2.bs-docs-sidebar
-        ul.nav.nav-list.bs-docs-sidenav(data-spy="affix", data-offset-top="280")
-          li
-            a(href='#the-project') The project
-          li
-            a(href='#map') Map
-          li
-            a(href='#get-it') Get it!
-          li
-            a(href='#contribute') Contribute
-          li
-            a(href='#the-team') The team
-      .span10
-        section#the-project
-          .page-header
-            h1 The project
+      .col-lg-4     
+        section#start
           .hero-unit
             p.
               If we want to bring about a more open community we’ll need more tools,
@@ -141,7 +242,7 @@ block body
   script(src='/js/bootstrap.js')
   script(src='https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false')
   script.
-    var map;
+    /*var map;
     var marker;
 
     function makeInfoWindowEvent(map, infowindow, contentString, marker) {
